# quadro

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  roadmap.md
.github/workflows/: release.yml
docs/: cli.md  mcp.md
docs/getting-started/: installation.md  quickstart.md  why-quadro.md
docs/overrides/: home.html  main.html
docs/stylesheets/: quadro.css
quadro/: cli.py  command.py  mcp.py  models.py  renderer.py  storage.py
quadro/commands/: add.py  delete.py  done.py  edit.py  list.py  milestones.py  move.py  show.py  start.py
tasks/: 13.md
tasks/Distribution/: 13.md  14.md  15.md  16.md  17.md  18.md  19.md  28.md  29.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md
tasks/Documentation/: 28.md  29.md  34.md  36.md  47.md  48.md  49.md  50.md
tasks/GitHub Issues Integration/: 11.md
tasks/MCP Server Integration/: 37.md  38.md  39.md  40.md  41.md  42.md  43.md  44.md  45.md  46.md  47.md  48.md  49.md  50.md  51.md  52.md  53.md
tests/: test_cli.py  test_mcp.py  test_models.py  test_renderer.py  test_storage.py
tests/commands/: test_add.py  test_delete.py  test_done.py  test_edit.py  test_list.py  test_milestones.py  test_move.py  test_show.py  test_start.py  test_update.py
