[project]
name = "quadro"
version = "0.1.0"
description = "Manage your tasks directly from the terminal using markdown"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
quadro = "quadro.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.5",
    "pre-commit>=3.5.0",
]
